--- a/WebContent/css/HomePage.css
+++ b/WebContent/css/HomePage.css
@@ -232,7 +232,7 @@ a {
 
 .listaVantaggi-container{
     text-align: center;
-    margin-top: 30px;
+    margin: 30px 0;
 }
 
 .listaVantaggi-container h1{
@@ -302,7 +302,6 @@ a {
 .footer-container{
     background: #13364D;
     text-align: center;
-    margin-top: 30px;
     padding: 30px 0;
 }
 
