--- a/WebContent/css/Lesson.css
+++ b/WebContent/css/Lesson.css
@@ -9,23 +9,31 @@
 }
 
 #pacchetto{
-	height: 350px;	
  	background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
- 	padding: 60px 0px 0px 100px;
+ 	padding: 50px 25px;
 }
 
 #titoloPacchetto{
 	margin-top: 0;
 	font-size: 40px;
-	color: white;
 }
 
 #descrizione{
 	margin-top: 0;
 	font-size: 20px;
+	width: 80%;
+}
+
+#bottoni{
+	display: grid;
+	grid-template-columns: repeat(12, 1fr);
 }
 
 #videoIntroduzione{
+	margin: 15px;
+	grid-column: span 3;
+	margin-right: 10px;
+	float: left;
 	font-family: 'Mali', cursive;
     background-color: #13364D;
     color: white;
@@ -37,6 +45,9 @@
 }
 
 #aggiungiAlCarrello{
+	margin: 15px;
+	grid-column: span 3;
+	float: left;
 	font-family: 'Mali', cursive;
     background-color: #4CAF50;
     color: white;
@@ -81,36 +92,64 @@
 	grid-column: span 12;
 }
 
+#sfondoVideo{
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 30;
+	background-color: rgb(0,0,0,0.8);
+	overflow-y:hidden;
+}
+
+#close-video i{
+	position: absolute;
+	top: 0;
+	margin: 10px;
+	font-size: 50px;
+	color: #c1dbf7;
+	right: 20px;
+}
+
+#video{
+	height: 100%;
+    display: none;
+    width: 100%;
+}
+
+iframe{
+	width: 80%;
+    height: 80%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#costruzione img{
+	width: 100%;
+	height: 100%;
+}
+
 @media only screen and (max-width: 425px){
-	#pacchetto{
-		padding: 5px;
-	}
-	
 	#titoloPacchetto{
 		font-size: 20px;
 	}
 	
 	#descrizione{
 		font-size: 15px;
-		width: 400px;
 	}
 	
-	#videoIntroduzione, #aggiungiAlCarrello{
-		padding: 10px 15px;
-		margin: 2px;
-	}	
-	
-	#bottoni{
-		display: grid;
-	}	
+	#videoIntroduzione, #aggiungiAlCarrello {
+		grid-column: span 12;
+		margin: 5px;
+	}
 }
 
 @media only screen and (min-width: 768px){
-	#pacchetto{
-		padding: 30px 0px 0px 50px;
+	#videoIntroduzione, #aggiungiAlCarrello {
+		grid-column: span 5;
 	}
-	
-	#descrizione{
-		width: 600px;
-	}
-}
+}	
