--- a/WebContent/css/catalogo.css
+++ b/WebContent/css/catalogo.css
@@ -139,19 +139,126 @@
     background: #0095cd;
     border-radius: 20px;
     font-family:'Coming Soon', cursive;
+   	text-decoration: none;
 }
 
-.catalogo{
-	text-decoration: none;
+.catalogo:hover{
+	 background: linear-gradient(to right, #24c6dc, #514a9d);
 }
-  
+
+.amministratore{
+	width: 200px;
+	display: grid;
+	grid-template-columns: repeat(12, 1fr);
+}
+
+.catalogoAmministratore{
+	grid-column: span 6;
+}
+
+.modifica{
+	background: #585961;
+	grid-column: span 6;
+	margin-right: 5px;
+	outline: none;
+    cursor: pointer;
+    text-align: center;
+    color: #fff;
+    padding: 5px 10px;
+    border: solid 1px black;
+    border-radius: 20px;
+    font-family:'Coming Soon', cursive;
+   	text-decoration: none;
+}
+
+.modifica:hover{
+	background: linear-gradient(to right, #e6dada, #274046);
+}
+
+/*Modifica pacchetto*/
+#sfondoModificaPacchetto{
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 30;
+	background-color: rgb(0,0,0,0.8);
+	overflow-y:hidden;
+}
+
+#containerModificaPacchetto{
+	position: fixed;
+	z-index: 1;
+	font-size: 15px;
+	display: none;
+	top:50%;
+	left:50%;
+	width:400px;
+	height:200px;
+	margin-left:-200px;
+	margin-top: -100px;
+}
+
+#modificaPacchetto{
+	box-shadow: -7px 7px black;
+	border-radius: 20px 20px 20px 20px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	padding: 25px 30px;
+	width: 400px;
+	text-align: left;
+	font-family: 'Mali', cursive;
+	transform: translate(-50%, -50%);
+	background: linear-gradient(to bottom, #546c7cCC 0%, #2890b9CC 100%);
+}
+
+#containerModificaPacchetto input{
+	position: relative;
+	font-size: 12px;
+	font-family: 'Mali', cursive;
+	width: 85%;
+	margin: 0;
+	padding: 15px 20px;
+	display: inline-block;
+	border: 1px solid #ccc;
+	box-sizing: border-box;
+	border-radius: 5px 5px 5px 5px;
+	line-height: 150%;
+}
+
+#updateButton{
+	border-radius: 5px 5px 5px 5px;
+	font-size: 40px;
+	float: right;
+	width: 45px;
+	cursor: pointer;
+	text-align: center;
+	background-color: #4CAF50;
+	color: white;
+}
+
+#updateButton:hover{
+	 background-color: #1CCE51;
+}
+
+#delete{
+	color: red;
+    font-size: 25px;
+    position: relative;
+    left: 20%;
+    cursor: pointer;
+}
+
 @media only screen and (min-width: 1440px){
     .barraCategorie{
         justify-content: center;
     }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1024px) {
   .cell {
       grid-column: span 6 !important;
   }
@@ -170,10 +277,22 @@
     .cell {
         grid-column: span 12 !important;
     }
+    
     .pacchetto {
-  	grid-column: span 12 !important;
+  		grid-column: span 12 !important;
+    }
+  	
+  	textarea{
+  		width: 190px;
+  		height: 45px;
+  	}
+  	
+  	#modificaPacchetto{
+  		width: 250px;
+  	}
+  	
+  	#containerModificaPacchetto input{
+  		width: 80%;
+  	}
  
 }
-
-
-
