--- a/WebContent/css/catalogo.css
+++ b/WebContent/css/catalogo.css
@@ -67,7 +67,7 @@
 .pacchetto{
     position: relative;
     grid-column: span 3;
-    border: 1px solid;
+    border-radius: 15px;
     margin: 10px 15px 15px 15px;
     background-color:#F2F3F4;
     transition: .5s all ease;
@@ -81,14 +81,14 @@
 }
 
 .foto-categoria{
-    max-width: 90%;
-    height: 185px;
+    max-width: 100%;
+    height: 250px;
     background-size: cover;
     display: block;
     margin: 0px auto;
     background-position: center;
-    border-radius: 5px;
-    box-shadow: 5px 5px 5px black;
+    border-top-right-radius: 14px;
+    border-top-left-radius: 14px;
     transition-property: all;
     transition-delay: 1s;
     transition-duration: 2s;
@@ -98,12 +98,12 @@
     text-align: center;
     font-size: 15px;
     font-family:'Coming Soon', cursive;
-    margin: 15px 10px 80px 10px;
+    margin: 10px 0 80px 0;
 }
 
 .pacchetto h1{
 	 font-family:'Coming Soon', cursive;
-	 margin: 0px 0px 0px 0px;
+	 margin: 10px 0 !important;
 	 color: black !important;
 }
 
@@ -125,7 +125,7 @@
 .sottocat h1{
     font-family:'Coming Soon', cursive;
     font-size: x-large;
-    margin: 0px 0px 0px 17px;
+    margin: 0;
     color: white;
 }
 
@@ -240,6 +240,10 @@
 	color: white;
 }
 
+#updateButton i{
+	pointer-events: none;
+}
+
 #updateButton:hover{
 	 background-color: #1CCE51;
 }
@@ -252,6 +256,16 @@
     cursor: pointer;
 }
 
+#noElement{
+	display: none;
+}
+
+#insuccess{
+	display: none;
+	text-align: center;
+	font-weight: bold;
+}
+
 @media only screen and (min-width: 1440px){
     .barraCategorie{
         justify-content: center;
@@ -260,15 +274,15 @@
 
 @media only screen and (max-width: 1024px) {
   .cell {
-      grid-column: span 6 !important;
+    grid-column: span 6 !important;
   }
   
   .cell.odd {
-      grid-column: span 12 !important;
+    grid-column: span 12 !important;
   }
   
   .pacchetto {
-  	grid-column: span 6 !important;
+	grid-column: span 6 !important;
   }
  
 }
@@ -294,5 +308,4 @@
   	#containerModificaPacchetto input{
   		width: 80%;
   	}
- 
 }
