--- a/WebContent/css/HomePage.css
+++ b/WebContent/css/HomePage.css
@@ -29,6 +29,19 @@ body, html{
 	margin-right: auto;
 }
 
+#numberIncrement{
+	position: absolute;
+	top: -5px;
+    border: 1px solid black;
+    background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+    color: white;
+    line-height: 25px;
+    text-align: center;
+    height: 25px;
+  	width: 25px;
+    border-radius: 50%;
+}
+
 #carrello {
 	margin-left: auto;
     display: block;
@@ -55,6 +68,7 @@ body, html{
 
 .navbar-item {
     padding: 5px 10px;
+    position: relative;
 }
 
 .navbar-item#logo-item {
