--- a/WebContent/css/Lesson.css
+++ b/WebContent/css/Lesson.css
@@ -44,6 +44,21 @@
     position: relative;
 }
 
+#recensione{
+	margin: 15px;
+	grid-column: span 3;
+	margin-right: 10px;
+	float: left;
+	font-family: 'Mali', cursive;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    cursor: pointer;
+    text-align: center;
+    border-radius: 5px 5px 5px 5px;
+    position: relative;
+}
+
 #aggiungiAlCarrello{
 	margin: 15px;
 	grid-column: span 3;
@@ -104,6 +119,60 @@
 	overflow-y:hidden;
 }
 
+#sfondoRecensione{
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 30;
+	background-color: rgb(0,0,0,0.8);
+	overflow-y:hidden;
+}
+
+#containerRecensione{
+	position: fixed;
+	z-index: 1;
+	font-size: 15px;
+	display: none;
+	top:50%;
+	left:50%;
+	width:400px;
+	height:200px;
+	margin-left:-200px;
+	margin-top: -100px;
+}
+
+#aggiungiRecensione{
+	color: black;
+	box-shadow: -7px 7px black;
+	border-radius: 20px 20px 20px 20px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	padding: 25px 30px;
+	width: 400px;
+	text-align: left;
+	font-family: 'Mali', cursive;
+	transform: translate(-50%, -50%);
+	background: linear-gradient(to bottom, #546c7cCC 0%, #2890b9CC 100%);
+}
+
+#aggiungiRecensione input{
+	position: relative;
+	font-size: 12px;
+	font-family: 'Mali', cursive;
+	width: 100%;
+	margin: 0;
+	padding: 15px 20px;
+	display: inline-block;
+	border: 1px solid #ccc;
+	box-sizing: border-box;
+	border-radius: 5px 5px 5px 5px;
+	line-height: 150%;
+}
+
 #close-video i{
 	position: absolute;
 	top: 0;
@@ -134,6 +203,13 @@ iframe{
 	height: 100%;
 }
 
+
+#insuccess{
+	display: none;
+	text-align: center;
+	font-weight: bold;
+}
+
 @media only screen and (max-width: 425px){
 	#titoloPacchetto{
 		font-size: 20px;
@@ -143,14 +219,23 @@ iframe{
 		font-size: 15px;
 	}
 	
-	#videoIntroduzione, #aggiungiAlCarrello {
+	#videoIntroduzione, #aggiungiAlCarrello, #recensione {
 		grid-column: span 12;
 		margin: 5px;
 	}
+	
+	textarea{
+  		width: 245px;
+  		height: 45px;
+  	}
+  	
+  	#aggiungiRecensione{
+  		width: 250px;
+  	}
 }
 
 @media only screen and (min-width: 768px){
-	#videoIntroduzione, #aggiungiAlCarrello {
+	#videoIntroduzione, #recensione {
 		grid-column: span 5;
 	}
 }	
