--- a/WebContent/css/libreria.css
+++ b/WebContent/css/libreria.css
@@ -6,9 +6,15 @@ body, html {
 }
 
 .container {
-	width: initial !important;
-    padding: 0 20%;
+	background: linear-gradient(to right, #0f2027, #203a43, #2c5364) !important;
 }
+
+.wrapper {
+    padding: 0 20%;
+    font-family: 'Coming Soon', cursive;
+    color: white;
+}
+
 
 .information * {
     margin: 0;
@@ -17,6 +23,7 @@ body, html {
 
 .information {
     text-align: center;
+ 	padding: 15px;
 }
 
 .pacchetto-wrap {
@@ -112,8 +119,45 @@ body, html {
     pointer-events: none;
 }
 
+#sfondoVideo{
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 30;
+	background-color: rgb(0,0,0,0.8);
+	overflow-y:hidden;
+}
+
+#close-video i{
+	position: absolute;
+	top: 0;
+	margin: 10px;
+	font-size: 50px;
+	color: #c1dbf7;
+	right: 20px;
+	cursor: pointer;
+}
+
+#video{
+	height: 100%;
+    display: none;
+    width: 100%;
+}
+
+iframe{
+	width: 80%;
+    height: 80%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 @media only screen and (max-width: 425px) {
-    .container {
+    .wrapper {
         padding: 0 10%;
     }
 }
