--- a/WebContent/css/Lesson.css
+++ b/WebContent/css/Lesson.css
@@ -2,7 +2,6 @@
 .containerLezioni{
 	margin: 0 auto;
     font-family: 'Mali', cursive;
-    color: white;
     width: 100%;
     height: 100%;
     overflow-y: auto;
@@ -11,6 +10,7 @@
 #pacchetto{
  	background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
  	padding: 50px 25px;
+ 	color: white;
 }
 
 #titoloPacchetto{
@@ -82,6 +82,7 @@
 	border-radius: 0 50px;	
 	border: 5px solid #3490cd;
 	font-size: 15px;
+	position: relative;
 }
 
 .fas.fa-quote-left{
@@ -89,14 +90,14 @@
 }
 
 #topIcon{
-	position: relative;
+	position: absolute;
     top: 10px;
-    right: 600px;
+   	left: 10px;
 }
 
 #bottomIcon{
-	position: relative;
-    left: 600px;
+	position: absolute;
+    right: 10px;
     bottom: 10px;
 }
 
@@ -210,6 +211,37 @@ iframe{
 	font-weight: bold;
 }
 
+#immagineNoLezione{
+	width: 20%;
+    margin: 20px auto;
+    display: block;
+}
+
+#noLesson{
+	text-align: center;
+	font-family: 'Mali', cursive;
+	color: black;
+}
+
+@media only screen and (max-width: 768px){
+	#videoIntroduzione, #aggiungiAlCarrello, #recensione {
+		grid-column: span 12;
+		margin: 5px;
+	}
+	
+	#immagineNoLezione{
+		width: 30%;
+	}
+	
+	#topIcon{
+		display: none;
+	}
+	
+	#bottomIcon{
+		display: none;
+	}
+}	
+
 @media only screen and (max-width: 425px){
 	#titoloPacchetto{
 		font-size: 20px;
@@ -217,11 +249,6 @@ iframe{
 	
 	#descrizione{
 		font-size: 15px;
-	}
-	
-	#videoIntroduzione, #aggiungiAlCarrello, #recensione {
-		grid-column: span 12;
-		margin: 5px;
 	}
 	
 	textarea{
@@ -232,10 +259,8 @@ iframe{
   	#aggiungiRecensione{
   		width: 250px;
   	}
-}
-
-@media only screen and (min-width: 768px){
-	#videoIntroduzione, #recensione {
-		grid-column: span 5;
+  	
+  		#immagineNoLezione{
+		width: 40%;
 	}
-}	
+}
